--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -22,13 +23,12 @@
     <!-- PDF Generation Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-
-    <!-- Application Logic -->
-    <script type="module" src="index.tsx" defer></script>
 <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.9.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.9.0",
+    "path": "https://esm.sh/path@^0.12.7",
+    "vite": "https://esm.sh/vite@^7.0.4"
   }
 }
 </script>
@@ -40,7 +40,7 @@
         <!-- HEADER -->
         <!-- =============================================== -->
         <header class="app-header">
-            <div class="logo" role="img" aria-label="BarricadiX Logo"></div>
+            <div class="logo">Barricadi<span>X</span></div>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#" id="nav-param-input" class="active" aria-current="page">Parametereingabe</a></li>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="user-info">
                     <i class="fas fa-user-circle"></i>
-                    <span>Angemeldet: Bundespolizei Berlin</span>
+                    <span>Angemeldet: BarricadiX Admin</span>
                 </div>
             </div>
         </header>
@@ -253,6 +253,8 @@
         </div>
     </div>
     <div id="tooltip" class="tooltip" role="tooltip"></div>
+    <!-- Application Logic -->
+    <script type="module" src="index.tsx" defer></script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
