--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <!-- importmap ist lokal nicht nötig; Build übernimmt Bundling -->
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index.css?v=2025-01-20-DEEP-TRANSLATION-FIX">
 </head>
 <body>
     <!-- =============================================== -->
@@ -399,7 +399,6 @@
                             </div>
                             
                             <!-- Products Table -->
-
                             <div id="products-table-container" class="products-table-container">
                                 <div id="products-loading" class="loading-indicator" data-translate-key="manufacturer.sidebar.productDatabase.loading">
                                     Produkte werden geladen...
