--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                                     id="password-input" 
                                     class="password-input" 
                                     placeholder="Passwort eingeben..."
+                                    autocomplete="new-password"
                                     required
                                 />
                                 <button type="submit" class="auth-button" id="auth-submit">
