--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
                             <div id="product-modal" class="product-modal" style="display: none;">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h3 id="modal-product-name" data-translate-key="manufacturer.productDatabase.modal.title">Produktdetails</h3>
+                                        <h3 id="modal-product-name" data-translate-key="manufacturer.sidebar.productDatabase.modal.title">Produktdetails</h3>
                                         <button id="close-modal" class="close-modal-btn">
                                             <i class="fas fa-times"></i>
                                         </button>
@@ -890,15 +890,15 @@
                                     <div class="modal-body">
                                         <div class="product-details-grid">
                                             <div class="detail-section">
-                                                <h4 data-translate-key="manufacturer.productDatabase.modal.technicalSpecs">Technische Spezifikationen</h4>
+                                                <h4 data-translate-key="manufacturer.sidebar.productDatabase.modal.technicalSpecs">Technische Spezifikationen</h4>
                                                 <div id="modal-technical-specs"></div>
                                             </div>
                                             <div class="detail-section">
-                                                <h4 data-translate-key="manufacturer.productDatabase.modal.performanceData">Leistungsdaten</h4>
+                                                <h4 data-translate-key="manufacturer.sidebar.productDatabase.modal.performanceData">Leistungsdaten</h4>
                                                 <div id="modal-performance-data"></div>
                                             </div>
                                             <div class="detail-section">
-                                                <h4 data-translate-key="manufacturer.productDatabase.modal.certification">Zertifizierung</h4>
+                                                <h4 data-translate-key="manufacturer.sidebar.productDatabase.modal.certification">Zertifizierung</h4>
                                                 <div id="modal-certification"></div>
                                             </div>
                                         </div>
@@ -906,11 +906,11 @@
                                     <div class="modal-footer">
                                         <button id="export-product" class="action-btn">
                                             <i class="fas fa-download"></i>
-                                            <span data-translate-key="manufacturer.productDatabase.modal.exportData">Daten exportieren</span>
+                                            <span data-translate-key="manufacturer.sidebar.productDatabase.modal.exportData">Daten exportieren</span>
                                         </button>
                                         <button id="print-product" class="action-btn">
                                             <i class="fas fa-print"></i>
-                                            <span data-translate-key="manufacturer.productDatabase.modal.printSpecs">Spezifikationen drucken</span>
+                                            <span data-translate-key="manufacturer.sidebar.productDatabase.modal.printSpecs">Spezifikationen drucken</span>
                                         </button>
                                     </div>
                                 </div>
